ajouts tests, fix controlleur modèle, démarrage du contrôleur pour la gestion des données associées au modèles
