# src/main/java/org/sguesdon/api/jsonvalidator/repository/ModelRepository.java
@@ -6,7 +6,10 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.mongodb.repository.MongoRepository;
 import org.springframework.stereotype.Repository;
 
+import java.util.Optional;
+
 @Repository
 public interface ModelRepository extends MongoRepository<ModelDto, String> {
     Page<ModelDto> findAll(Pageable paging);
+    Optional<ModelDto> findOneByEndpoint(String endpoint);
 }
